--- a/resolution.tex
+++ b/resolution.tex
@@ -70,7 +70,7 @@ The simulations use the CAM6 physics package. The Cloud Layers Unified by Binorm
 
 \subsection{Experimental Design}
  
-The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. All analyses exclude the first month of the simulations, and are computed on their native grids unless otherwise stated.
+The convergence experiment is performed in an aqua-planet configuration \citep{NH2000ASL,MWO2016JAMES}, an all ocean planet with fixed, zonally symmetric sea surface temperatures modeled after present day Earth \citep[$QOBS$ in][]{NH2000ASL}. The aqua-planets are in a perpetual equinox, and aerosols are largely absent from the simulations. Each simulation is ran for one simulated year. Six different horizontal grids are used in this study, which are provided in Table~\ref{tbl:table1}. In addition to the six simulations used in the convergence experiment, an ensemble of 24 simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are ran for year in order to increase confidence in the assessment of resolution sensitivity in this study. All analyses exclude the first month of the simulations, and are computed on their native grids unless otherwise stated.
 
 The horizontal hyper-viscosity operators $\nu$ vary with resolution after \cite{HETAL2019JAMES}, also provided in Table~\ref{tbl:table1}. The values of $\nu$ are a factor 2.5 greater for divergence damping and are not shown. $\Delta t_{phys}$ is chosen to scale with resolution, in proportion to the grid spacing,
 \begin{equation}
@@ -128,19 +128,19 @@ The global mean, climatological components $\langle f_{u} \rangle \, \langle \om
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_diags_2panel.pdf}\\
 \end{center}
-\caption{Components of the climatological, global mean vertical pressure velocity, (a) $\langle f_{u} \rangle \langle \omega_{u} \rangle$ and (b) $\langle f_{d} \rangle \langle \omega_{d} \rangle$. Grey crosses are for the perturbed parameter ensemble runs.}
+\caption{Components of the climatological, global mean vertical pressure velocity, (a) $\langle f_{u} \rangle \langle \omega_{u} \rangle$ and (b) $\langle f_{d} \rangle \langle \omega_{d} \rangle$. Grey crosses are for the 24 member perturbed parameter ensemble.}
 \label{fig:2panel}
 \end{figure}
 
 \subsection{Vertical Velocities and Convective Precipitation}
 
-The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the {\em{ZM scheme}} hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. In addition to the six simulations used in the convergence experiment, an ensemble of 24 additional simulations containing different model parameters (e.g., using the lower resolution physics grid) and across different resolutions are used, increasing confidence in the relationship between subsidence and convective activity.
+The large increase in magnitude of the upward and downward vertical velocities with resolution may be expected to impact the behavior of other model components. Curiously, there is an excellent negative correlation (Pearson's R-value = 0.99, N = 27) between the global mean, climatological $\langle f_{d} \rangle \, \langle \omega_{d} \rangle$ and a measure of the activity of the \cite{ZM1995AO} deep convection scheme (referred to as the {\em{ZM scheme}} hereafter), global mean, climatological $FREQZM$ (Figure~\ref{fig:corr}). At any given grid-point and time-step, $FREQZM$ is a binary variable: one if the ZM scheme is active, zero if it is not. Time mean $FREQZM$ is therefore the fraction of the model time that the ZM scheme is triggered, i.e., dilute CAPE exceeds $\geq 70$ J/kg. The relationship indicates that model simulations with greater subsidence also have less convective activity.
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_diags_corr.pdf}\\
 \end{center}
-\caption{Scatter plot of global mean, climatological $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and FREQZM, and the fitted linear regression which has a Pearson's R-value = 0.99. Grey crosses are for the perturbed parameter ensemble runs.}
+\caption{Scatter plot of global mean, climatological $\langle f_{d} \rangle \langle \omega_{d} \rangle$ and FREQZM, and the fitted linear regression which has a Pearson's R-value = 0.99, using all 27 simulations. Grey crosses are for the 24 member perturbed parameter ensemble runs.}
 \label{fig:corr}
 \end{figure}
 
@@ -148,19 +148,19 @@ To further understand this relationship, a logistic regression between $\langle 
 \begin{equation}
 p = \frac{exp{[b_0 + b_1 x]}}{1 + exp{[b_0 + b_1 x]}}, \label{eq:eq6-3}
 \end{equation}
-where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is then the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable given subsiding regions are generally more stable, and so dilute CAPE is likely smaller compared with ascending regions. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
+where $b_0$ and $b_1$ are the shape parameters of the exponential. The predictor is then the instantaneous $\langle f_{d} \rangle \langle \omega_{d} \rangle$ of a grid column, and the predictand the binary $FREQZM$. The assumption is then that subsidence is the independent variable, which the authors believe is reasonable since the environment of subsiding regions is generally stable, and the ZM scheme is modulated by a stability calculation, dilute CAPE. Grid column regressions that are statistically significant at the $95\%$ level using a log-likelihood test \citep{WILKSBOOK} are retained for analysis. Since the aqua-planets have zonally symmetric boundary conditions, there is a zonally varying structure in the goodness of fit (R-value) and parameter $b_1$ (hereafter referred to as the sensitivity parameter; Figure~\ref{fig:4zonal}a,b).
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=14pc,angle=0]{figs/temp_4zonal.pdf}\\
 \end{center}
-\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (d) time mean surface latent heat fluxes and (c) drizzle fraction. Colors are as in Figure~\ref{fig:2pdf}.}
+\caption{Zonal mean (a) R-values and (b) sensitivity parameter in the logistic regression, (c) climatological surface latent heat fluxes and (d) drizzle fraction.}
 \label{fig:4zonal}
 \end{figure}
 
 The zonal mean R-values indicate the greatest goodness of fit in the $\pm 10^{\circ}$ latitude band, hereafter referred to as the deep Tropics. Figure~\ref{fig:4zonal}c shows the climatological, zonal-mean latent heat flux in the simulations, which is expected to contribute positively to the component of dilute CAPE associated with the thermodynamic state of boundary layer parcels \citep{Z2002JGR}. In the deep Tropics, latent heat fluxes are small, and the sensitivity parameter is large and negative (Figure~\ref{fig:4zonal}b), consistent with the idea that subsiding motion actively depresses dilute CAPE and the activity of the ZM scheme in the simulations. The sensitivity parameter becomes less negative in the deep Tropics with resolution, likely due to the greater magnitude $\langle f_{d} \rangle \langle \omega_{d} \rangle$ with resolution, which requires a lower sensitivity parameter to predict the binary $FREQZM$. The R-values generally decrease with resolution indicating that there is degradation in the relationship with resolution.
 
-Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep Tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes of consideration marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
+Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to the climatological, global mean change in convective precipitation with resolution. This is a reflection of changes in the partitioning of the Intertropical Convergence Zone (ITCZ) between convective and stratiform precipitation with resolution. The table indicates that a majority ($60-70 \%$) of the reduction in convective precipitation with resolution is from changes within the deep Tropics (except in going from $ne20$ to $ne30$, where deep Tropical convective precipitation rates increase with resolution due to an extremely wide double-ITCZ in the $ne20$ simulation that spans well outside of $\pm 10^{\circ}$ latitude). Expanding the latitudes boundaries marginally to $\pm 15^{\circ}$, roughly $75\%$ of the changes in convective precipitation with resolution occur in this region (again, ignoring $ne30-ne20$). Taken together, the region with the largest change in convective precipitation with resolution is also the region where the logistic regression indicates that subsiding motion is most skillful at depressing the activity of the convection scheme.
 
  \begin{table}
  \caption{Fractional contribution of latitude bands $\pm 10^{\circ}$ and $\pm 15^{\circ}$ to changes in global mean precipitation with resolution. The grid headers refer to differences with respect to the next lowest grid resolution, e.g., $ne30 = ne30-ne20$, $ne40=ne40-ne30$, etc..., and computed through remapping all data to the $ne20$ grid.}
@@ -182,28 +182,29 @@ Table~\ref{tbl:table2} shows the fractional contribution of the deep Tropics to 
  \label{tbl:table2}
  \end{table}
 
-To estimate the dilute CAPE values associated with subsiding motion in the deep Tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep Tropics, with resolution. The ascending regions are associated with larger values of CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the CAPE value computed for mean conditions over the entire deep Tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep Tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights vary from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep Tropics, verified by the similar CAPE values produced through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
+To estimate the dilute CAPE values associated with subsiding motion in the deep Tropics, temperature and moisture profiles are conditionally sampled depending on whether $\langle \omega \rangle$, the mass-weighted vertical integral of $\omega$, is positive or negative, indicating predominantly subsiding or ascending grid columns. The time mean temperature and moisture profiles of subsiding and ascending regions are then used to compute the dilute CAPE used in the ZM scheme, offline. 
+
+Figure~\ref{fig:cape}a shows the dilute CAPE values associated with mean conditions for ascending, descending and all grid columns in the deep Tropics, with resolution. The ascending regions are associated with larger values of dilute CAPE ($>180$ J/kg) relative to subsiding regions ($<110$ J/kg), and the dilute CAPE value computed for mean conditions over the entire deep Tropics decrease monotonically with resolution, consistent with the reduction in convective activity with resolution. The space-time weights associated with ascending and descending grid columns in the deep Tropics vary drastically with resolution (Figure~\ref{fig:cape}b). The subsiding (ascending) space-time weights change from $0.32$ ($0.68$) at $ne20$, monotonically increasing (decreasing) with resolution to $0.51$ ($0.49$) in $ne120$. The increasing occurrence of stable, subsiding grid columns with resolution results in a reduction in CAPE for the entire deep Tropics, verified by the similar CAPE values derived through taking the weighted sum of the ascending/descending CAPE values (grey crosses in Figure~\ref{fig:cape}a).
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
-\caption{(a) time mean fraction of the deep tropics in the simulations with upward $\langle \omega \rangle$ (red) and downward $\langle \omega \rangle$ (blue), (b) CAPE computed from the mean temperature and moisture profiles of upward regions and downward regions. Black is for CAPE computed from the mean temperature and moisture profiles for the entire deep tropics, grey is the approximate discussed in the text.}
+\caption{(a) Dilute CAPE computed from time mean temperature and moisture profiles of ascending (red), subsiding (blue) and all grid columns (black) in the deep Tropics ($\pm 10^{\circ}$ latitude), and (b) space-time weights of ascending (red) and descending (blue) grid columns in the deep Tropics. (c) Dilute CAPE computed for ascending/descending grid columns, but using the mean temperature profile for the entire deep Tropics, (d) Same as (c) but using the mean moisture profile for the entire deep Tropics. Grey crosses in (a) are dilute CAPE derived from the sum of the products of space-time weights with the dilute CAPE values of ascending/descending grid columns.}
 \label{fig:cape}
 \end{figure}
 
-Figure~\ref{fig:profiles} shows the climatological temperature and specific humidity profiles of subsiding grid cells in the deep Tropics, presented as anomalies from the mean temperature and specific humidity of the entire deep Tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion results in adiabatic warming and the advection of drier, upper-troposphere air downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the parcel temperature reduces parcel buoyancy \citep{Z2002JGR}, while mixing drier environmental air into a rising air parcel reduces the moisture available to warm the parcel through latent heating \citep{RB1992JAS}. 
+Figure~\ref{fig:profiles} shows the time mean temperature and specific humidity profiles of subsiding grid cells in the deep Tropics, expressed as anomalies from the mean temperature and specific humidity of the entire deep Tropics. The mean profiles of subsiding regions have an anomalous warming layer in the $600-800$ hPa layer and an anomalous moisture deficit throughout the entire column. This warming and drying patterns is consistent with the effects of subsidence, whose motion produces adiabatic warming and advection of drier, upper-troposphere air downward. Both warming and drying the environment oppose the growth of dilute CAPE through reducing parcel buoyancy; warming the environment relative to the parcel temperature reduces parcel buoyancy \citep{Z2002JGR}, and mixing drier environmental air into a rising air parcel reduces the moisture available to warm the parcel through latent heating \citep{RB1992JAS}. 
 
 \begin{figure}
 \begin{center}
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_profiles.pdf}\\
 \end{center}
-\caption{}
+\caption{Time mean (a) temperature and (b) specific humidity profiles of subsiding grid cells in the deep Tropics ($\pm 10^{\circ}$ latitude) in the convergence experiment, presented as anomalies from the mean temperature and specific humidity of the entire deep Tropics in each simulation.}
 \label{fig:profiles}
 \end{figure}
 
-An experiment is carried out to unravel the contributions of warming or drying to dilute CAPE values of subsiding grid columns. Dilute CAPE is re-computed for descending/ascending regions, but using the mean specific humidity profile derived from the entire deep Tropics. Then the opposite is performed, computing dilute CAPE using the ascending/descending regions specific humidity but with the temperature profile from the entire deep Tropics.
-
+An experiment is carried out to unravel the contributions of warming and drying to dilute CAPE values of subsiding grid columns. Through computing dilute CAPE using the mean specific humidity of subsiding regions in the deep Tropics, but setting the temperature profile to the mean profile for the entire deep Tropics, one can isolate the role of changes in moisture in subsiding regions on the dilute CAPE calculation, while doing the reverse isolates the influence of changes in temperature. Figure~\ref{fig:profiles}c shows the influence of moisture of subsiding/ascending regions on dilute CAPE, and Figure~\ref{fig:profiles}d the influence of temperature. The first order cause for the reduction of dilute CAPE is clearly do to the reduction (increase) in moisture in subsiding (ascending) region, while temperature has a smaller, second order influence on the dilute CAPE changes. This analysis indicates that the drying of the deep Tropics with resolution manifests through an increase in occurrence of subsiding motion with resolution, which reduces the frequency the ZM scheme is active through reducing the frequency the dilute CAPE threshold for convection occurs.
 
 %The dilute CAPE calculation is a modified form of the traditional CAPE, which is shown to be sensitive to the vertical velocity field in an analysis of a large eddy simulation \citep{SZ2018JCLIM}. A relationship between vertical velocities and CAPE falls out of the CAPE equation itself (F. Song, personal communication). The CAPE budget can be separated into two components \citep{Z2002JGR}; instability due to the thermodynamic state of parcels in the boundary layer and the instability generated through radiative cooling and advection of dry static energy and moisture by the environment, i.e., the resolved flow. The latter term is defined as, 
 %\begin{equation}
@@ -211,7 +212,7 @@ An experiment is carried out to unravel the contributions of warming or drying t
 %\end{equation}
 %where $T_{ve}$ is the virtual temperature of the environment, $R_d$ the gas constant for dry air and subscripts $b$ and $t$ refer to the parcel launch level (typically in the boundary layer) and the level of neutral buoyancy, respectively \citep{Z2002JGR}. Equation~\ref{eq:cape} shows that warming the environment reduces CAPE though reducing the buoyancy of lifted air parcels. The $T_{ve}$ budget contains a term; the vertical advection of potential energy, which simplifies to $\frac{w}{c_{pd}} \frac{\partial gz}{\partial z} = \frac{g}{c_{pd}} w$, and directly proportional to the vertical velocity $w$ by the factor $\frac{g}{c_{pd}}$, with $g$ the acceleration of gravity and $c_{pd}$ the specific heat capacity of dry air. In subsiding regions, $w$ is negative and opposes the generation of CAPE through adiabatic warming of the environment.
 
-\subsection{Convection Biases Independent of Resolution}
+\subsection{Biases Unaffected by Resolution}
 
 Poleward of the deep tropics and within the subtropics, the logistic regression indicates that subsidence is a poor predictor of $FREQZM$ (Figure~\ref{fig:4zonal}a,b). The R-value decreases to a local minimum between $15^{\circ} - 20^{\circ}$ latitude, and the magnitude of the sensitivity parameter steeply declines. The local minimum in the R-value corresponds with a local maximum in the latent heat fluxes (Figure~\ref{fig:4zonal}c), indicating that the boundary layer is being driven unstable by large surface latent heat fluxes. The CAPE values in the $10^{\circ} - 15^{\circ}$ latitude region are likely to be small, since the ZM precipitation rate consists primarily of drizzle (Figure~\ref{fig:4zonal}d). The predominance of drizzle in this region is probably a result of the large subsiding motion in the subtropics (not shown) constraining CAPE from becoming too large. AGCMs are known to suffer from an excess drizzle bias in precisely this region \citep{D2006JCLIM}, and this analysis indicates that this bias is due to the use of a CAPE trigger function.
 
@@ -222,7 +223,7 @@ Poleward of the deep tropics and within the subtropics, the logistic regression 
 \noindent\includegraphics[width=20pc,angle=0]{figs/temp_pdecomp.pdf}\\
 \end{center}
 \caption{}
-\label{fig:profiles}
+\label{fig:prdecomp}
 \end{figure}
 
 \ack 
